--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "scripts": {
     "dev": "next",
-    "build": "NODE_ENV=production && next build",
+    "build": "SET NODE_ENV=production && next build",
     "start": "node server.js"
   },
   "engines": {
